# miden

./: .gitignore
air/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/inputs/: mod.rs
core/src/inputs/advice/: merkle_path_set.rs  merkle_tree.rs  mod.rs  sparse_merkle_tree.rs
core/src/stack/: outputs.rs
miden/: Cargo.toml  index.html
miden-crypto/: Cargo.toml
miden/src/: lib.rs  main.rs
miden/src/cli/: data.rs  prove.rs  run.rs  verify.rs
miden/src/examples/: mod.rs
miden/src/repl/: mod.rs
processor/: Cargo.toml
processor/src/: lib.rs  trace.rs
processor/src/decoder/: mod.rs  tests.rs  trace.rs
processor/src/hasher/: mod.rs
prover/: Cargo.toml
prover/src/: lib.rs
verifier/: Cargo.toml
winterfell-air/: Cargo.toml
winterfell-air/src/: options.rs
winterfell-air/src/air/: trace_info.rs
winterfell-air/src/proof/: commitments.rs  context.rs  mod.rs  ood_frame.rs  queries.rs
winterfell-crypto/src/hash/rescue/rp64_256/: digest.rs  tests.rs
winterfell-fri/: Cargo.toml
winterfell-fri/src/: proof.rs
winterfell-math/src/field/f64/: mod.rs
winterfell-prover/: Cargo.toml
winterfell-prover/src/: lib.rs  matrix.rs
winterfell-verifier/: Cargo.toml
winterfell-verifier/src/: lib.rs
winterfell/prover/src/: lib.rs
