[package]
name = "miden"
version = "0.2.0"
description="Miden virtual machine"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/maticnetwork/miden"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "stark", "virtual-machine", "zkp"]
edition = "2021"
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
concurrent = ["prover/concurrent", "std"]
default = ["std"]
executable = ["crypto", "env_logger", "hex/std", "std", "serde/std", "serde_derive", "serde_json/std", "structopt", "winter-utils"]
std = ["air/std", "assembly/std", "log/std", "processor/std", "prover/std", "verifier/std", "vm-core/std", "hex/std", "crypto/std", "winter-utils/std"]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.2", default-features = false }
assembly = { package = "miden-assembly", path = "../assembly", version = "0.2", default-features = false }
crypto = { package = "winter-crypto",path = "../winterfell-crypto", version = "0.4", default-features = false, optional = true }
env_logger = { version = "0.9", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
processor = { package = "miden-processor", path = "../processor", version = "0.2", default-features = false }
prover = { package = "miden-prover", path = "../prover", version = "0.2", default-features = false }
serde_derive = {version = "1.0.117", optional = true }
structopt = { version = "0.3", default-features = false, optional = true }
verifier = { package = "miden-verifier", path = "../verifier", version = "0.2", default-features = false }
winter-utils = { package = "winter-utils",path = "../winterfell-utils/utils/core", version = "0.4", optional = true }
vm-core = { package = "miden-core", path = "../core", version = "0.2", default-features = false }
wasm-bindgen = "0.2.74"
wasm-bindgen-test = "0.3.24"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.0"
console_error_panic_hook = "0.1.6"

[dev-dependencies]
blake3 = "1.3.1"
num-bigint = "0.4"
proptest = "1.0.0"
rand-utils = { package = "winter-rand-utils", version = "0.4" }
sha2 = "0.10.2"
sha3 = "0.10.1"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false


[profile.release]
lto = true
opt-level = 's'