[package]
name = "winter-air"
version = "0.4.0"
description = "AIR components for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-air/0.4.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "arithmetization", "air"]
edition = "2021"
rust-version = "1.60"

[lib]
bench = false

[features]
default = ["std"]
std = ["crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
crypto = { version = "0.4", path = "../winterfell-crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.4", path = "../winterfell-fri", package = "winter-fri", default-features = false }
math = { version = "0.4", path = "../winterfell-math", package = "winter-math", default-features = false }
utils = { version = "0.4", path = "../winterfell-utils/utils/core", package = "winter-utils", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand-utils = { version = "0.4", path = "../winterfell-utils/utils/rand", package = "winter-rand-utils" }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
