[package]
name = "winter-prover"
version = "0.4.0"
description = "Winterfell STARK prover"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-prover/0.4.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "prover"]
edition = "2021"
rust-version = "1.60"

[lib]
bench = false

[features]
concurrent = ["crypto/concurrent", "math/concurrent", "fri/concurrent", "utils/concurrent", "std"]
default = ["std"]
std = ["air/std", "crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
air = { version = "0.4", path = "../winterfell-air", package = "winter-air", default-features = false }
crypto = { version = "0.4", path = "../winterfell-crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.4", path = '../winterfell-fri', package = "winter-fri", default-features = false }
log = { version = "0.4", default-features = false }
math = { version = "0.4", path = "../winterfell-math", package = "winter-math", default-features = false }
utils = { version = "0.4", path = "../winterfell-utils/utils/core", package = "winter-utils", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
wasm-bindgen = "0.2.74"
wasm-bindgen-test = "0.3.24"
# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
